# MyAgent

./: .gitignore  README.md  pyproject.toml  requirements-vision.txt  requirements.txt
scripts/: build_windows_exe.ps1  run_desktop.bat  run_ui.bat  setup_windows.ps1
src/openclaw_local/: __init__.py  agent.py  config.py  desktop.py  main.py  ollama_client.py  plugins.py  tasks.py  tools.py  ui.py  vision.py
tests/: test_agent_direct_intents.py  test_ollama_client.py  test_plugins_tasks.py  test_tools.py  test_tools_automation.py  test_ui_chat.py  test_vision.py
